12345678901234567890123456789012345678901234567890123456789012345678901234567890
         1         2         3         4         5         6         7         8
----+----|----+----|----+----|----+----|----+----|----+----|----+----|----+----|



ChangeLog (IOMETER 1 - 2004.nn.nn):
===================================

- Applied patches:
   - invalid_spec.patch by Lamont Cranston (Allows the user to set any
     request sizes, sector allignment etc. - even if it doesn't match the
     storage devices block size. While in interactive mode, the user
     must confirm his will - in batch mode invalid specifications gets
     executed without requiring any kind of confirmation / force flag).
   - scross_spec_list.patch by Lamont Cranston (Ensures that the access
     specification list gets scrolled during the run - so the active
     access specification can always be seen).
   - linux_kstat_build_fix.patch by Lamont Cranston (Fixes a minor bug
     in the build of the linux_kstat version for Linux 2.4).
   - IOTargetDisk_cpp.patch by Lamont Cranston (Closes the files in
     getSizeOfPhysDisk() and getSectorSizeOfPhysDisk() under Linux
     and explain the use of the BLKBSZGET define.
   - disk_full.patch by Lamont Cranston (fixes handling of the disk full
     condition when preparing logical drives).
   - iometer-2003.12.16-post.DS2.DanielGlobalAccessSpecs.patch by
     Daniel Scheibli (adds a set of sample Global Access Specifications).
   - iometer-netware.patch by Thayne Harmon (modifies the usage output
     to reflect volume exclusion, adoped Makefile to use Code Warrier 8).
   - iometer-2003.12.16-post.DS2.DanielIcfVersionStringWithDash.patch
     by Daniel Scheibli (Enables support for trailing dashes in the
     version string of loaded ICF file).
   - iometer-2003.12.16-post.DS2.DanielEnforceParameters.patch by
     Daniel Scheibli (enforces usage of parameter -m when -i was
     specified).
   - iometer-netware.patch by Thayne Harmon (adds two minor changes